package ethanmmd.mastermind;


class GraphicsMastermind extends Mastermind {


    public static void main(String[] args) {
        new GraphicsMastermind().play();
    }
}
