@startuml

title __MASTERMIND's Class Diagram__\n

  namespace ethanmmd.mastermind {
    class ethanmmd.mastermind.ConsoleMastermind {
        {static} + main()
        # createLogic()
        # createView()
    }

    class ethanmmd.mastermind.GraphicsMastermind {
            {static} + main()
            # createLogic()
            # createView()
    }

    abstract class ethanmmd.mastermind.Mastermind {
            # Mastermind()
            {abstract} # createLogic()
            {abstract} # createView()
            # play()
        }
  }
  

  ethanmmd.mastermind.ConsoleMastermind -up-|> ethanmmd.mastermind.Mastermind
  ethanmmd.mastermind.GraphicsMastermind -up-|> ethanmmd.mastermind.Mastermind
  ethanmmd.mastermind.Mastermind o-- ethanmmd.mastermind.controllers.Logic : logic
  ethanmmd.mastermind.Mastermind o-- ethanmmd.mastermind.views.View : view


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
